[project]
name = "clickup-operator"
version = "0.1.0"
description = "clickup thru claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0"
]

[[project.authors]]
name = "noahvanhart"
email = "noahvanhart@pm.me"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project.scripts]
clickup-operator = "clickup_operator.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
